전체회원, RFM share 변경 커밋

--- a/packus/web/templates/dashboard.html
+++ b/packus/web/templates/dashboard.html
@@ -118,131 +118,12 @@
               </div>
             </div>
           </div>
-<!--          <div class="col-lg-3 col-md-6 col-sm-6">-->
-<!--            <div class="card card-stats">-->
-<!--              <div class="card-body ">-->
-<!--                <div class="row">-->
-<!--                  <div class="col-5 col-md-4">-->
-<!--                    <div class="icon-big text-center icon-warning">-->
-<!--                      <i class="nc-icon nc-vector text-danger"></i>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                  <div class="col-7 col-md-8">-->
-<!--                    <div class="numbers">-->
-<!--                      <p class="card-category">Errors</p>-->
-<!--                      <p class="card-title">23<p>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="card-footer ">-->
-<!--                <hr>-->
-<!--                <div class="stats">-->
-<!--                  <i class="fa fa-clock-o"></i>-->
-<!--                  In the last hour-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="col-lg-3 col-md-6 col-sm-6">-->
-<!--            <div class="card card-stats">-->
-<!--              <div class="card-body ">-->
-<!--                <div class="row">-->
-<!--                  <div class="col-5 col-md-4">-->
-<!--                    <div class="icon-big text-center icon-warning">-->
-<!--                      <i class="nc-icon nc-favourite-28 text-primary"></i>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                  <div class="col-7 col-md-8">-->
-<!--                    <div class="numbers">-->
-<!--                      <p class="card-category">Followers</p>-->
-<!--                      <p class="card-title">+45K<p>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              <div class="card-footer ">-->
-<!--                <hr>-->
-<!--                <div class="stats">-->
-<!--                  <i class="fa fa-refresh"></i>-->
-<!--                  Update now-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
         </div>
         <div class="row">
           <div class="col-md-12">
             <div class="card ">
-              <div class="card-header ">
-<!--                <h5 class="card-title">각 Life Stage(가입일) 회원 정보</h5>-->
-                <p class="card-category">각 Life Stage(가입일) 회원 정보</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/16e68970-d2cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
+                <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5287f1e0-d2c6-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20%EC%A0%84%EC%B2%B4%ED%9A%8C%EC%9B%90%5D',viewMode:view)" height="900" width="100%"></iframe>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header ">
-<!--                <h5 class="card-title">전체회원의 RFM Histogram(Recency) - Class 1</h5>-->
-                <p class="card-category">전체회원의 RFM Histogram(Recency)</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/58684050-d2cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header ">
-<!--                <h5 class="card-title">전체회원의 RFM Histogram(Recency) - Class 1</h5>-->
-                <p class="card-category">전체회원의 RFM Histogram(Frequency)</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/8f268890-d2cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header ">
-<!--                <h5 class="card-title">전체회원의 RFM Histogram(Recency) - Class 1</h5>-->
-                <p class="card-category">전체회원의 RFM Histogram(Monetary)</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/1d518880-d2ce-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card ">
-              <div class="card-header ">
-<!--                <h5 class="card-title">전체매출 추이</h5>-->
-                <p class="card-category">월별 전체매출 추이</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/7a5e2e70-d2ce-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card">
-              <div class="card-header ">
-<!--                <h5 class="card-title">업종 비율</h5>-->
-                <p class="card-category">업종 비율</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/9fee1e20-d2ce-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
         </div>
       </div>
 <!--      <footer class="footer footer-black  footer-white ">-->
