--- a/packus/web/templates/model.html
+++ b/packus/web/templates/model.html
@@ -66,222 +66,11 @@
       <!-- End Navbar -->
       <div class="content">
         <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-<!--                <h5 class="card-title">차트 1</h5>-->
-                <p class="card-category">Lift stage(회원가입 시기)를 고려한 RFM 세그멘테이션</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/22cb97e0-d2d0-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 변동 회원(반기마다 update)</p>
-              </div>
-              <div class="card-body"></div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">클래스별 RFM 분포</p>
-              </div>
-              <div class="card-body"></div>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 1 - Recency</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/91627200-d2d0-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 1 - Frequency</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/483656e0-d2d1-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 1 - Monetary</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/bdd6cbf0-d2d1-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 2 - Recency</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/06242a60-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 2 - Frequency</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/0fc84650-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 2 - Monetary</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/1a812da0-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 3 - Recency</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/29dff650-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 3 - Frequency</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/7c436c60-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 3 - Monetary</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/8a10e6b0-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 4 - Recency</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/97fcbe70-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 4 - Frequency</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/a71d6cb0-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                <p class="card-category">Class 4 - Monetary</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/b0dbee70-d2d2-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card card-chart">
-              <div class="card-header">
-                <p class="card-category">매출 추이(집단 1 vs 그 외 집단)</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/5473d070-d2d3-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card card-chart">
-              <div class="card-header">
-                <p class="card-category">업종</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/023e4830-d2d3-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
           <div class="col-md-12">
-            <div class="card card-chart">
-              <div class="card-header">
-                <p class="card-category">고객리스트</p>
-              </div>
-              <div class="card-body p-0" style="height: 350px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/goto/beb1c8c07a546a6206ca3ba160daae09" height="100%" width="100%"></iframe>
-<!--                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/discover/46199260-d2c6-11ea-83ec-578bbedbe7b6?_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%"></iframe>-->
-              </div>
+            <div class="card">
+              <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5d9994a0-d2d3-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20RFM%20%EB%AA%A8%EB%8D%B8%5D',viewMode:view)" height="850" width="100%"></iframe>
             </div>
           </div>
         </div>
       </div>
-<!--      <footer class="footer footer-black  footer-white ">-->
-<!--        <div class="container-fluid">-->
-<!--          <div class="row">-->
-<!--            <nav class="footer-nav">-->
-<!--              <ul>-->
-<!--                <li><a href="https://www.creative-tim.com" target="_blank">Creative Tim</a></li>-->
-<!--                <li><a href="https://www.creative-tim.com/blog" target="_blank">Blog</a></li>-->
-<!--                <li><a href="https://www.creative-tim.com/license" target="_blank">Licenses</a></li>-->
-<!--              </ul>-->
-<!--            </nav>-->
-<!--            <div class="credits ml-auto">-->
-<!--              <span class="copyright">-->
-<!--                © <script>-->
-<!--                  document.write(new Date().getFullYear())-->
-<!--                </script>, made with <i class="fa fa-heart heart"></i> by Creative Tim-->
-<!--              </span>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </footer>-->
 {% endblock %}
