--- a/packus/web/templates/dashboard.html
+++ b/packus/web/templates/dashboard.html
@@ -18,132 +18,22 @@
             <span class="navbar-toggler-bar navbar-kebab"></span>
             <span class="navbar-toggler-bar navbar-kebab"></span>
           </button>
-<!--          <div class="collapse navbar-collapse justify-content-end" id="navigation">-->
-<!--            <form>-->
-<!--              <div class="input-group no-border">-->
-<!--                <input type="text" value="" class="form-control" placeholder="Search...">-->
-<!--                <div class="input-group-append">-->
-<!--                  <div class="input-group-text">-->
-<!--                    <i class="nc-icon nc-zoom-split"></i>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </form>-->
-<!--            <ul class="navbar-nav">-->
-<!--              <li class="nav-item">-->
-<!--                <a class="nav-link btn-magnify" href="javascript:;">-->
-<!--                  <i class="nc-icon nc-layout-11"></i>-->
-<!--                  <p>-->
-<!--                    <span class="d-lg-none d-md-block">Stats</span>-->
-<!--                  </p>-->
-<!--                </a>-->
-<!--              </li>-->
-<!--              <li class="nav-item btn-rotate dropdown">-->
-<!--                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                  <i class="nc-icon nc-bell-55"></i>-->
-<!--                  <p>-->
-<!--                    <span class="d-lg-none d-md-block">Some Actions</span>-->
-<!--                  </p>-->
-<!--                </a>-->
-<!--                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">-->
-<!--                  <a class="dropdown-item" href="#">Action</a>-->
-<!--                  <a class="dropdown-item" href="#">Another action</a>-->
-<!--                  <a class="dropdown-item" href="#">Something else here</a>-->
-<!--                </div>-->
-<!--              </li>-->
-<!--              <li class="nav-item">-->
-<!--                <a class="nav-link btn-rotate" href="javascript:;">-->
-<!--                  <i class="nc-icon nc-settings-gear-65"></i>-->
-<!--                  <p>-->
-<!--                    <span class="d-lg-none d-md-block">Account</span>-->
-<!--                  </p>-->
-<!--                </a>-->
-<!--              </li>-->
-<!--            </ul>-->
-<!--          </div>-->
         </div>
       </nav>
       <!-- End Navbar -->
       <div class="content">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="row" id="memberCount">
+          <div class="col-lg-7 col-md-6 col-sm-6">
             <div class="card card-stats">
-              <div class="card-body ">
-                <div class="row">
-                  <div class="col-5 col-md-4">
-                    <div class="icon-big text-center icon-warning">
-                      <i class="nc-icon nc-globe text-warning"></i>
-                    </div>
-                  </div>
-                  <div class="col-7 col-md-8">
-                    <div class="numbers">
-                      <p class="card-category">총 회원수</p>
-                      <p class="card-title">7,560명<p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card-footer ">
-                <hr>
-                <div class="stats">
-                  <i class="fa fa-refresh"></i>
-                  Update Now
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
-              <div class="card-body ">
-                <div class="row">
-                  <div class="col-5 col-md-4">
-                    <div class="icon-big text-center icon-warning">
-                      <i class="nc-icon nc-money-coins text-success"></i>
-                    </div>
-                  </div>
-                  <div class="col-7 col-md-8">
-                    <div class="numbers">
-                      <p class="card-category">구매이력 有 회원</p>
-                      <p class="card-title">6,235명<p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card-footer ">
-                <hr>
-                <div class="stats">
-                  <i class="fa fa-calendar-o"></i>
-                  Last day
-                </div>
-              </div>
+                <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/ade1e940-d5fc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),panels:!((embeddableConfig:(),gridData:(h:15,i:'063e9593-75ab-4bba-9ce1-6e888bd97113',w:24,x:0,y:0),id:'13f379a0-d568-11ea-83ec-578bbedbe7b6',panelIndex:'063e9593-75ab-4bba-9ce1-6e888bd97113',type:visualization,version:'7.8.0'),(embeddableConfig:(),gridData:(h:15,i:'59ceba00-d4e1-4eb7-9f5e-fd01b84eef0d',w:24,x:24,y:0),id:'67825050-d568-11ea-83ec-578bbedbe7b6',panelIndex:'59ceba00-d4e1-4eb7-9f5e-fd01b84eef0d',type:visualization,version:'7.8.0')),query:(language:kuery,query:''),timeRestore:!f,title:'%5B%EC%A0%84%EC%B2%B4%ED%9A%8C%EC%9B%90%5D%ED%9A%8C%EC%9B%90%20%EC%88%98',viewMode:edit)" height="300" width="100%" style="border-radius: .8rem;"></iframe>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
             <div class="card ">
-                <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5287f1e0-d2c6-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20%EC%A0%84%EC%B2%B4%ED%9A%8C%EC%9B%90%5D',viewMode:view)" height="900" width="100%"></iframe>
+                <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5287f1e0-d2c6-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20%EC%A0%84%EC%B2%B4%ED%9A%8C%EC%9B%90%5D',viewMode:view)" height="900" width="100%" style="border-radius: .8rem;"></iframe>
             </div>
         </div>
       </div>
-<!--      <footer class="footer footer-black  footer-white ">-->
-<!--        <div class="container-fluid">-->
-<!--          <div class="row">-->
-<!--            <nav class="footer-nav">-->
-<!--              <ul>-->
-<!--                <li><a href="https://www.creative-tim.com" target="_blank">Creative Tim</a></li>-->
-<!--                <li><a href="https://www.creative-tim.com/blog" target="_blank">Blog</a></li>-->
-<!--                <li><a href="https://www.creative-tim.com/license" target="_blank">Licenses</a></li>-->
-<!--              </ul>-->
-<!--            </nav>-->
-<!--            <div class="credits ml-auto">-->
-<!--              <span class="copyright">-->
-<!--                © <script>-->
-<!--                  document.write(new Date().getFullYear())-->
-<!--                </script>, made with <i class="fa fa-heart heart"></i> by Creative Tim-->
-<!--              </span>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </footer>-->
 {% endblock %}
