--- a/packus/web/templates/segments/seg_reports.html
+++ b/packus/web/templates/segments/seg_reports.html
@@ -65,7 +65,7 @@
 
     <div class="content">
         <div class="row" id="segReports">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-6 col-sm-6">
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">세그먼트 모델 선택</label>
                     <select class="form-control" id="exampleFormControlSelect1">
@@ -76,54 +76,89 @@
                       <option>5</option>
                     </select>
                 </div>
+            </div>
+            <div class="col-md-3 col-sm-3">
+                <div class="form-group">
+                    <label for="exampleAnalysisTermSelectFrom">분석기간 선택</label>
+                    <input type="date" class="form-control" name="from" id="exampleAnalysisTermSelectFrom">
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-3">
+                <div class="form-group">
+                    <label for="exampleAnalysisTermSelectTo"></label>
+                    <input type="date" class="form-control mt-2" name="to" id="exampleAnalysisTermSelectTo">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
                 <div class="card">
-                    <div class="card-header border-bottom pt-1 pb-1">
-                        <p>보고서 카드 1</p>
-                    </div>
-                    <div class="card-body">
-
+                    <div class="card-body d-flex">
+                        <div class="mr-2" style="width: 30%; border: 1px solid #eee; border-radius: .5rem;">선택된 세그먼트 모델 1</div>
+                        <div class="mr-2" style="width: 30%; border: 1px solid #eee; border-radius: .5rem;">선택된 세그먼트 모델 2</div>
+                        <div class="mr-2" style="width: 30%; border: 1px solid #eee; border-radius: .5rem;">선택된 세그먼트 모델 3</div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-4">
-                <div class="form-group">
-                    <label for="exampleFormControlSelect2">세그먼트 모델 선택</label>
-                    <select class="form-control" id="exampleFormControlSelect2">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                    </select>
-                </div>
+        </div>
+        <hr />
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
                 <div class="card">
-                    <div class="card-header border-bottom pt-1 pb-1">
-                        <p>보고서 카드 2</p>
-                    </div>
-                    <div class="card-body">
-
+                    <div class="card-body d-flex">
+                        <div class="col w-50" style="border: 1px solid #eee;">
+                            <p class="mt-2" style="font-size: 15px; font-weight: 600;">1. 선택한 세그먼트별 회원 수(명)</p>
+                            <canvas id="myChart1"></canvas>
+                        </div>
+                        <div class="col w-50" style="border: 1px solid #eee;">
+                            <p class="mt-2" style="font-size: 15px; font-weight: 600;">2. 전체 회원 대비 비율</p>
+                            <canvas id="myChart2"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-4">
-                <div class="form-group">
-                    <label for="exampleFormControlSelect3">세그먼트 모델 선택</label>
-                    <select class="form-control" id="exampleFormControlSelect3">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                    </select>
-                </div>
-                <div class="card">
-                    <div class="card-header border-bottom pt-1 pb-1">
-                        <p>보고서 카드 3</p>
-                    </div>
+        </div>
+        <hr />
+         <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <div class="card row">
                     <div class="card-body">
-
+                        <table class="table table-striped text-center">
+                          <thead class="border-top">
+                            <tr>
+                              <th scope="col">회원수</th>
+                              <th scope="col">Recency</th>
+                              <th scope="col">Frequency</th>
+                              <th scope="col">Monetary</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <th scope="row">300</th>
+                              <td>평균 5일 전 구매</td>
+                              <td>평균 1.4회 구매</td>
+                              <td>평균 180,624 지출</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        <div class="d-flex">
+                            <div class="col-sm" style="border: 1px solid #eee;">
+                                <p class="mt-2" style="font-size: 15px; font-weight: 600;">Recency</p>
+                                <canvas id="myChart3"></canvas>
+                            </div>
+                            <div class="col-sm" style="border: 1px solid #eee;">
+                                <p class="mt-2" style="font-size: 15px; font-weight: 600;">Frequency</p>
+                                <canvas id="myChart4"></canvas>
+                            </div>
+                            <div class="col-sm" style="border: 1px solid #eee;">
+                                <p class="mt-2" style="font-size: 15px; font-weight: 600;">Monetary</p>
+                                <canvas id="myChart5"></canvas>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
