--- a/packus/web/static/css/base.scss
+++ b/packus/web/static/css/base.scss
@@ -4236,3 +4236,13 @@ License - nucleoapp.com/license/
     list-style:none;
     height: 28px;
 }
+.chartTitle {
+    font-size: 15px;
+    font-weight: 600;
+}
+
+
+
+
+
+
