--- a/packus/web/templates/base.html
+++ b/packus/web/templates/base.html
@@ -33,84 +33,8 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 {% block script %}
 <script type="text/javascript">
-    var chart = new Chart('myChart1', {
-        type: 'bar',
-        data: {
-            labels: ['중국음식점', '일반한식', '치킨집'],
-            datasets: [{
-                label: '회원 수',
-                backgroundColor: '#82ccdd',
-                borderColor: '#82ccdd',
-                data: [3200, 1450, 990]
-            }]
-        },
-        options: {
-            tooltips: {
-              callbacks: {
-                  label: function(tooltipItem, data) {
-                      var label = data.datasets[tooltipItem.datasetIndex].label || '';
-                      var value = tooltipItem.value;
-                      var unit = '명';
-                      return label + ': ' + value + unit;
-                  }
-              }
-          },
-          scales: {
-              yAxes: [{
-                ticks: {
-                  baseAtZero: true
-                }
-              }]
-          }
-        }
-    });
 
-    var chart = new Chart('myChart2', {
-        type: 'horizontalBar',
-        data: {
-            labels: ['중국음식점', '일반한식', '치킨집'],
-            datasets: [{
-                label: '전체회원 대비 비율',
-                backgroundColor: '#82ccdd',
-                borderColor: '#82ccdd',
-                data: [18.0, 19.5, 45.3]
-            }]
-        },
-        options: {
-              tooltips: {
-                callbacks: {
-                    label: function(tooltipItem, data) {
-                        var label = data.datasets[tooltipItem.datasetIndex].label || '';
-                        var value = tooltipItem.value;
-                        var unit = '%';
-                        return label + ': ' + value + unit;
-                    }
-                }
-            }
-         }
-    });
 
-    var chart = new Chart('myChart3', {
-        type: 'bar',
-        data: {
-            labels: ['123~223', '223~323', '323~423', '423~523', '523~623', '623~723', '723~823', '823~923'],
-            datasets: [{
-                label: '회원 수',
-                backgroundColor: '#6a89cc',
-                borderColor: '#6a89cc',
-                data: [2, 3, 5, 8, 5, 6, 7, 3]
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                  ticks: {
-                    baseAtZero: true
-                  }
-                }]
-            }
-        }
-    });
 
     var chart = new Chart('myChart4', {
         type: 'bar',
@@ -135,6 +59,138 @@
     });
 
     var chart = new Chart('myChart5', {
+        type: 'bar',
+        data: {
+            labels: ['중국음식점', '일반한식', '치킨집'],
+            datasets: [{
+                label: '회원 수',
+                backgroundColor: '#6a89cc',
+                borderColor: '#6a89cc',
+                data: [3200, 1450, 990]
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                  ticks: {
+                    baseAtZero: true
+                  }
+                }]
+            }
+        }
+    });
+
+    var chart = new Chart('myChart6', {
+        type: 'bar',
+        data: {
+            labels: ['123~223', '223~323', '323~423', '423~523', '523~623', '623~723', '723~823', '823~923'],
+            datasets: [{
+                label: '회원 수',
+                backgroundColor: '#6a89cc',
+                borderColor: '#6a89cc',
+                data: [2, 3, 5, 8, 5, 6, 7, 3]
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                  ticks: {
+                    baseAtZero: true
+                  }
+                }]
+            }
+        }
+    });
+
+    var chart = new Chart('myChart7', {
+        type: 'bar',
+        data: {
+            labels: ['1~2', '2~3', '3~4', '4~5', '5~6', '6~7'],
+            datasets: [{
+                label: '회원 수',
+                backgroundColor: '#6a89cc',
+                borderColor: '#6a89cc',
+                data: [15, 10, 12, 8, 9, 4]
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                  ticks: {
+                    baseAtZero: true
+                  }
+                }]
+            }
+        }
+    });
+
+    var chart = new Chart('myChart8', {
+        type: 'bar',
+        data: {
+            labels: ['중국음식점', '일반한식', '치킨집'],
+            datasets: [{
+                label: '회원 수',
+                backgroundColor: '#6a89cc',
+                borderColor: '#6a89cc',
+                data: [3200, 1450, 990]
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                  ticks: {
+                    baseAtZero: true
+                  }
+                }]
+            }
+        }
+    });
+
+    var chart = new Chart('myChart9', {
+        type: 'bar',
+        data: {
+            labels: ['123~223', '223~323', '323~423', '423~523', '523~623', '623~723', '723~823', '823~923'],
+            datasets: [{
+                label: '회원 수',
+                backgroundColor: '#6a89cc',
+                borderColor: '#6a89cc',
+                data: [2, 3, 5, 8, 5, 6, 7, 3]
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                  ticks: {
+                    baseAtZero: true
+                  }
+                }]
+            }
+        }
+    });
+
+    var chart = new Chart('myChart10', {
+        type: 'bar',
+        data: {
+            labels: ['1~2', '2~3', '3~4', '4~5', '5~6', '6~7'],
+            datasets: [{
+                label: '회원 수',
+                backgroundColor: '#6a89cc',
+                borderColor: '#6a89cc',
+                data: [15, 10, 12, 8, 9, 4]
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                  ticks: {
+                    baseAtZero: true
+                  }
+                }]
+            }
+        }
+    });
+
+    var chart = new Chart('myChart11', {
         type: 'bar',
         data: {
             labels: ['중국음식점', '일반한식', '치킨집'],
