--- a/packus/web/templates/model.html
+++ b/packus/web/templates/model.html
@@ -18,53 +18,40 @@
             <span class="navbar-toggler-bar navbar-kebab"></span>
             <span class="navbar-toggler-bar navbar-kebab"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <form>
-              <div class="input-group no-border">
-                <input type="text" value="" class="form-control" placeholder="Search...">
-                <div class="input-group-append">
-                  <div class="input-group-text">
-                    <i class="nc-icon nc-zoom-split"></i>
-                  </div>
-                </div>
-              </div>
-            </form>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link btn-magnify" href="javascript:;">
-                  <i class="nc-icon nc-layout-11"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Stats</span>
-                  </p>
-                </a>
-              </li>
-              <li class="nav-item btn-rotate dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="nc-icon nc-bell-55"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Some Actions</span>
-                  </p>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link btn-rotate" href="javascript:;">
-                  <i class="nc-icon nc-settings-gear-65"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Account</span>
-                  </p>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
       </nav>
       <!-- End Navbar -->
       <div class="content">
+          <div class="row">
+              <div class="col-lg-3 col-md-3 col-sm-6">
+                <div class="card card-stats">
+                    <div class="card-body p-0 m-0" style="height: 300px;">
+                        <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/0ad1eb60-d3cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'(%EB%AA%85)',field:n_memno,json:'%7B%22precision_threshold%22:%2040000%7D'),schema:metric,type:cardinality)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5BRFM%5D%20%EA%B3%A0%EA%B0%9D%EA%B5%B0%20-%20%ED%9A%8C%EC%9B%90%EC%88%98',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                    </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-6">
+                <div class="card card-stats">
+                    <div class="card-body p-0 m-0" style="height: 300px;">
+                        <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/355edd20-d3cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'(avg.%201%EC%9D%B8%2F%EC%9D%BC)',field:recency),schema:metric,type:avg)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5BRFM%5D%20%EA%B3%A0%EA%B0%9D%EA%B5%B0%20-%20Recency',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                    </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-6">
+                <div class="card card-stats">
+                    <div class="card-body p-0 m-0" style="height: 300px;">
+                        <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/47ececc0-d3cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'(avg.%201%EC%9D%B8%2F%EA%B1%B4)',field:frequency),schema:metric,type:avg)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5BRFM%5D%20%EA%B3%A0%EA%B0%9D%EA%B5%B0%20-%20Frequency',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                    </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-6">
+                <div class="card card-stats">
+                    <div class="card-body p-0 m-0" style="height: 300px;">
+                        <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/5ca4ba30-d3cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'(avg.%201%EC%9D%B8%2F%EB%A7%8C%EC%9B%90)',field:monetary2),schema:metric,type:avg)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5BRFM%5D%20%EA%B3%A0%EA%B0%9D%EA%B5%B0%20-%20Monetary',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                    </div>
+                </div>
+              </div>
+          </div>
         <div class="row">
           <div class="col-md-12">
             <div class="card">
