--- a/packus/web/templates/segments/seg_reports.html
+++ b/packus/web/templates/segments/seg_reports.html
@@ -1,158 +1,116 @@
 <!--세그먼트 생성 화면-->
-    <nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-transparent" id="pills-segments" role="tabpanel" aria-labeleledby="pills-segments">
-        <div class="container-fluid">
-          <div class="navbar-wrapper">
-            <div class="navbar-toggle">
-              <button type="button" class="navbar-toggler">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-              </button>
-            </div>
-            <a class="navbar-brand" href="javascript:;">회원 세그먼트 보고서</a>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
+<nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-transparent" id="pills-segments" role="tabpanel" aria-labeleledby="pills-segments">
+    <div class="container-fluid">
+      <div class="navbar-wrapper">
+        <div class="navbar-toggle">
+          <button type="button" class="navbar-toggler">
+            <span class="navbar-toggler-bar bar1"></span>
+            <span class="navbar-toggler-bar bar2"></span>
+            <span class="navbar-toggler-bar bar3"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <form>
-              <div class="input-group no-border">
-                <input type="text" value="" class="form-control" placeholder="Search...">
-                <div class="input-group-append">
-                  <div class="input-group-text">
-                    <i class="nc-icon nc-zoom-split"></i>
-                  </div>
-                </div>
+        </div>
+        <a class="navbar-brand" href="javascript:;">회원 세그먼트 보고서</a>
+      </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-bar navbar-kebab"></span>
+        <span class="navbar-toggler-bar navbar-kebab"></span>
+        <span class="navbar-toggler-bar navbar-kebab"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navigation">
+        <form>
+          <div class="input-group no-border">
+            <input type="text" value="" class="form-control" placeholder="Search...">
+            <div class="input-group-append">
+              <div class="input-group-text">
+                <i class="nc-icon nc-zoom-split"></i>
               </div>
-            </form>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link btn-magnify" href="javascript:;">
-                  <i class="nc-icon nc-layout-11"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Stats</span>
-                  </p>
-                </a>
-              </li>
-              <li class="nav-item btn-rotate dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="nc-icon nc-bell-55"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Some Actions</span>
-                  </p>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link btn-rotate" href="javascript:;">
-                  <i class="nc-icon nc-settings-gear-65"></i>
-                  <p>
-                    <span class="d-lg-none d-md-block">Account</span>
-                  </p>
-                </a>
-              </li>
-            </ul>
+            </div>
           </div>
-        </div>
-      </nav>
-      <!-- End Navbar -->
+        </form>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link btn-magnify" href="javascript:;">
+              <i class="nc-icon nc-layout-11"></i>
+              <p>
+                <span class="d-lg-none d-md-block">Stats</span>
+              </p>
+            </a>
+          </li>
+          <li class="nav-item btn-rotate dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="nc-icon nc-bell-55"></i>
+              <p>
+                <span class="d-lg-none d-md-block">Some Actions</span>
+              </p>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn-rotate" href="javascript:;">
+              <i class="nc-icon nc-settings-gear-65"></i>
+              <p>
+                <span class="d-lg-none d-md-block">Account</span>
+              </p>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End Navbar -->
 
-    <div class="content">
-        <div class="row" id="segReports">
-            <div class="col-md-6 col-sm-6">
-                <div class="form-group">
-                    <label for="exampleFormControlSelect1">세그먼트 모델 선택</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                    </select>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="form-group">
-                    <label for="exampleAnalysisTermSelectFrom">분석기간 선택</label>
-                    <input type="date" class="form-control" name="from" id="exampleAnalysisTermSelectFrom">
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
-                <div class="form-group">
-                    <label for="exampleAnalysisTermSelectTo"></label>
-                    <input type="date" class="form-control mt-2" name="to" id="exampleAnalysisTermSelectTo">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="card">
-                    <div class="card-body d-flex">
-                        <div class="mr-2" style="width: 30%; border: 1px solid #eee; border-radius: .5rem;">선택된 세그먼트 모델 1</div>
-                        <div class="mr-2" style="width: 30%; border: 1px solid #eee; border-radius: .5rem;">선택된 세그먼트 모델 2</div>
-                        <div class="mr-2" style="width: 30%; border: 1px solid #eee; border-radius: .5rem;">선택된 세그먼트 모델 3</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr />
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="card">
-                    <div class="card-body d-flex">
-                        <div class="col w-50" style="border: 1px solid #eee;">
-                            <p class="mt-2" style="font-size: 15px; font-weight: 600;">1. 선택한 세그먼트별 회원 수(명)</p>
-                            <canvas id="myChart1"></canvas>
+<div class="content">
+    <div class="row">
+        <div class="col-md-12 col-sm-12">
+            <div class="card mt-1">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-group">
+                                <label for="exampleAnalysisTermSelectFrom">분석기간 선택</label>
+                                <input type="date" class="form-control" name="from" id="exampleAnalysisTermSelectFrom">
+                            </div>
                         </div>
-                        <div class="col w-50" style="border: 1px solid #eee;">
-                            <p class="mt-2" style="font-size: 15px; font-weight: 600;">2. 전체 회원 대비 비율</p>
-                            <canvas id="myChart2"></canvas>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-group">
+                                <label for="exampleAnalysisTermSelectTo"></label>
+                                <input type="date" class="form-control mt-2" name="to" id="exampleAnalysisTermSelectTo">
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <hr />
-         <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="card row">
-                    <div class="card-body">
-                        <table class="table table-striped text-center">
-                          <thead class="border-top">
-                            <tr>
-                              <th scope="col">회원수</th>
-                              <th scope="col">Recency</th>
-                              <th scope="col">Frequency</th>
-                              <th scope="col">Monetary</th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr>
-                              <th scope="row">300</th>
-                              <td>평균 5일 전 구매</td>
-                              <td>평균 1.4회 구매</td>
-                              <td>평균 180,624 지출</td>
-                            </tr>
-                          </tbody>
-                        </table>
-                        <div class="d-flex">
-                            <div class="col-sm" style="border: 1px solid #eee;">
-                                <p class="mt-2" style="font-size: 15px; font-weight: 600;">Recency</p>
-                                <canvas id="myChart3"></canvas>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="segmentSelect1">세그먼트 모델 선택</label>
+                                <select class="form-control" id="segmentSelect1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                </select>
                             </div>
-                            <div class="col-sm" style="border: 1px solid #eee;">
-                                <p class="mt-2" style="font-size: 15px; font-weight: 600;">Frequency</p>
-                                <canvas id="myChart4"></canvas>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="segmentSelect2">세그먼트 모델 선택</label>
+                                <select class="form-control" id="segmentSelect2">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                </select>
                             </div>
-                            <div class="col-sm" style="border: 1px solid #eee;">
-                                <p class="mt-2" style="font-size: 15px; font-weight: 600;">Monetary</p>
-                                <canvas id="myChart5"></canvas>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="segmentSelect3">세그먼트 모델 선택</label>
+                                <select class="form-control" id="segmentSelect3">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                </select>
                             </div>
                         </div>
                     </div>
@@ -160,5 +118,112 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col align-self-end">
+            <button class="btn btn-primary m-0">조회</button>
+        </div>
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col-md-12 col-sm-12">
+            <div class="card">
+                <div class="card-body d-flex">
+                    <div class="col w-50" style="border: 1px solid #eee;">
+                        <p class="mt-2" style="font-size: 15px; font-weight: 600;">1. 선택한 세그먼트별 회원 수(명)</p>
+                        <canvas id="myChart1"></canvas>
+                    </div>
+                    <div class="col w-50" style="border: 1px solid #eee;">
+                        <p class="mt-2" style="font-size: 15px; font-weight: 600;">2. 전체 회원 대비 비율</p>
+                        <canvas id="myChart2"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr />
+     <div class="row">
+        <div class="col-md-12 col-sm-12">
+            <div class="card">
+                <div class="card-body">
+                    <table class="table table-striped text-center">
+                      <thead class="border-top">
+                        <tr>
+                          <th scope="col">모델명</th>
+                          <th scope="col">회원수</th>
+                          <th scope="col">Recency</th>
+                          <th scope="col">Frequency</th>
+                          <th scope="col">Monetary</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">모델명 1</th>
+                          <td>300</td>
+                          <td>평균 5일 전 구매</td>
+                          <td>평균 1.4회 구매</td>
+                          <td>평균 180,624 지출</td>
+                      </tr>
+                      <tr>
+                          <th scope="row">모델명 2</th>
+                          <td>200</td>
+                          <td>평균 3일 전 구매</td>
+                          <td>평균 1회 구매</td>
+                          <td>평균 200,375 지출</td>
+                      </tr>
+                      <tr>
+                          <th scope="row">모델명 3</th>
+                          <td>200</td>
+                          <td>평균 1일 전 구매</td>
+                          <td>평균 4회 구매</td>
+                          <td>평균 156,375 지출</td>
+                      </tr>
+                      </tbody>
+                    </table>
+                    <div class="row mx-1 my-4">
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Recency</p>
+                            <canvas id="myChart3"></canvas>
+                        </div>
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Frequency</p>
+                            <canvas id="myChart4"></canvas>
+                        </div>
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Monetary</p>
+                            <canvas id="myChart5"></canvas>
+                        </div>
+                    </div>
+                    <div class="row mx-1 my-4">
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Recency</p>
+                            <canvas id="myChart6"></canvas>
+                        </div>
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Frequency</p>
+                            <canvas id="myChart7"></canvas>
+                        </div>
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Monetary</p>
+                            <canvas id="myChart8"></canvas>
+                        </div>
+                    </div>
+                    <div class="row mx-1 my-4">
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Recency</p>
+                            <canvas id="myChart9"></canvas>
+                        </div>
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Frequency</p>
+                            <canvas id="myChart10"></canvas>
+                        </div>
+                        <div class="col-md-4" style="border: 1px solid #eee;">
+                            <p class="mt-2 chartTitle">Monetary</p>
+                            <canvas id="myChart11"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
